plugins {
    id 'java-library'
}

group = 'fr.riege.ebsl'
version = rootProject.findProperty('mod_version') ?: '1.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

dependencies {
    
    compileOnly 'io.github.spair:imgui-java-binding:1.90.0'
    api 'com.google.code.gson:gson:2.11.0'
    api 'org.slf4j:slf4j-api:2.0.16'
    api 'it.unimi.dsi:fastutil:8.5.15'
    testImplementation 'io.github.spair:imgui-java-binding:1.90.0'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 21
}


tasks.named('compileJava') {
    doLast {
        def sources = fileTree('src/main/java').filter { it.name.endsWith('.java') }
        sources.each { file ->
            def content = file.text
            if (content.contains('net.minecraft.') || content.contains('net.fabricmc.')) {
                throw new GradleException("MC import detected in common: ${file.path}")
            }
        }
    }
}
